--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -130,10 +130,16 @@
   "noDataAvailable": "Aucune donnée disponible, veuillez ajouter un nouveau portefeuille",
   "manageAddresses": "Ajouter un portefeuille",
   "maps": "Cartes",
-    "depositBalance": "Solde des dépôts",
-  "borrowBalance": "Solde des emprunts",
+    "depositBalance": "Dépôts",
+  "borrowBalance": "Emprunts",
   "usdcDepositBalance": "Solde des dépôts USDC",
   "usdcBorrowBalance": "Solde des emprunts USDC",
   "xdaiDepositBalance": "Solde des dépôts XDAI",
-  "xdaiBorrowBalance": "Solde des emprunts XDAI"
+  "xdaiBorrowBalance": "Solde des emprunts XDAI",
+  "ethereumContract": "Contract ethereum",
+  "gnosisContract": "Contract gnosis",
+  "viewOnMap": "voir sur la carte",
+  "totalRentReceived": "total des revenus",
+  "groupedRentGraph": "Loyers groupés",
+  "cumulativeRentGraph": "Cumul des loyers"
 }
