--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -130,13 +130,19 @@
   "statistics": "Statistics",
   "noDataAvailable": "No data available, please add a new wallet",
   "manageAddresses": "Add wallet",
-  "depositBalance": "Deposit Balance",
-  "borrowBalance": "Borrow Balance",
+  "depositBalance": "Deposits",
+  "borrowBalance": "Borrows",
   "usdcDepositBalance": "USDC Deposit Balance",
   "usdcBorrowBalance": "USDC Borrow Balance",
   "xdaiDepositBalance": "XDAI Deposit Balance",
   "xdaiBorrowBalance": "XDAI Borrow Balance",
+  "ethereumContract": "Ethereum contract",
+  "gnosisContract": "Gnosis contract",
+  "viewOnMap":"view on map",
   "maps": "Maps",
+  "totalRentReceived": "total of revenus",
+    "groupedRentGraph": "Loyers groupés",
+  "cumulativeRentGraph": "Cumul des loyers",
   "@dashboard": {
     "description": "Label for the Dashboard tab"
   },
