--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -87,7 +87,7 @@
   "author": "Author",
   "thanks": "Thanks",
   "thankYouMessage": "Thank you to everyone who contributed to this project.",
-  "specialThanks": "Special thanks to @Sigri, @ehpst, and pitsbi for their support.",
+  "specialThanks": "Special thanks to @Sigri, @ehpst, and @pitsbi for their support.",
   "donate": "Donate",
   "supportProject": "Support the project",
   "donationMessage": "If you like this app and want to support its development, you can donate.",
@@ -120,6 +120,7 @@
   "sortByName": "Sort by Name",
   "sortByValue": "Sort by Value",
   "sortByAPY": "Sort by APY",
+  "sortByInitialLaunchDate":"sort by recently added",
   "ascending": "Ascending",
   "descending": "Descending",
   "tokenDistributionByCity": "Token Distribution by City",
@@ -141,8 +142,10 @@
   "viewOnMap":"view on map",
   "maps": "Maps",
   "totalRentReceived": "total of revenus",
-    "groupedRentGraph": "Loyers groupés",
-  "cumulativeRentGraph": "Cumul des loyers",
+  "groupedRentGraph": "Grouped Rent Graph",
+  "cumulativeRentGraph": "Cumulative Rent Graph",
+  "roiPerProperties": "Property ROI",
+  "roiAlertInfo": "This ROI feature is in beta and is currently calculated based on the income received from the property and the current token value.",
   "@dashboard": {
     "description": "Label for the Dashboard tab"
   },
