--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,145 +1,148 @@
 {
-    "@@locale": "es",
-    "settingsTitle": "Configuración",
-    "darkTheme": "Tema oscuro",
-    "light": "Claro",
-    "dark": "Oscuro",
-    "themeUpdated": "Tema actualizado a {theme}",
-    "language": "Idioma",
-    "languageUpdated": "Idioma actualizado a {language}",
-    "english": "Inglés",
-    "french": "Francés",
-    "spanish": "Espagnol",
-    "manageEvmAddresses": "Gestionar monederos",
-    "hello": "Hola",
-    "lastRentReceived": "Su último alquiler recibido asciende a ",
-    "portfolio": "Portafolio",
-    "totalPortfolio": "Portafolio total",
-    "wallet": "Monedero",
-    "rmm": "RMM",
-    "currency":"Moneda",
-    "rwaHoldings": "RWA Holdings SA",
-    "properties": "Propiedades",
-    "rented": "Alquilado",
-    "rentedUnits": "Unidades alquiladas",
-    "tokens": "Tokens",
-    "totalTokens": "Total de tokens",
-    "rents": "Alquileres",
-    "annualYield": "Rendimiento anual",
-    "daily": "Diario",
-    "weekly": "Semanal",
-    "monthly": "Mensual",
-    "annually": "Anual",
-    "noRentReceived": "No se ha recibido alquiler",
-    "finances": "Finanzas",
-    "others": "Otros",
-    "insights": "Información",
-    "characteristics": "Características",
-    "constructionYear": "Año de construcción",
-    "propertyStories": "Número de pisos",
-    "totalUnits": "Unidades totales",
-    "lotSize": "Tamaño del lote",
-    "squareFeet": "Tamaño interior",
-    "offering": "Oferta",
-    "initialLaunchDate": "Fecha de lanzamiento inicial",
-    "rentalType": "Tipo de alquiler",
-    "rentStartDate": "Primer alquiler",
-    "totalInvestment": "Inversión total",
-    "underlyingAssetPrice": "Precio del activo subyacente",
-    "initialMaintenanceReserve": "Reserva de mantenimiento inicial",
-    "grossRentMonth": "Alquiler bruto por mes",
-    "netRentMonth": "Alquiler neto por mes",
-    "annualPercentageYield": "Rendimiento anual",
-    "blockchain": "Blockchain",
-    "tokenAddress": "Dirección del token",
-    "network": "Red",
-    "tokenSymbol": "Símbolo del token",
-    "contractType": "Tipo de contrato",
-    "rentalStatus": "Estado del alquiler",
-    "yieldEvolution": "Evolución del rendimiento",
-    "priceEvolution": "Evolución del precio",
-    "viewOnRealT": "Ver en RealT",
-    "notSpecified": "No especificado",
-    "noPriceEvolution": "Sin evolución del precio. El último precio es:",
-    "priceEvolutionPercentage": "Evolución del precio:",
-    "noYieldEvolution": "Sin evolución del rendimiento. El último rendimiento es:",
-    "yieldEvolutionPercentage": "Evolución del rendimiento:",
-    "unknownCity": "Ciudad desconocida",
-    "nameUnavailable": "Nombre no disponible",
-    "other": "Otro",
-    "totalValue": "Valor total",
-    "amount": "Cantidad",
-    "apy": "APY",
-    "revenue": "Ingresos",
-    "day": "Día",
-    "month": "Mes",
-    "year": "Año",
-    "appName": "RealToken",
-    "appDescription": "aplicación móvil para la comunidad",
-    "realTokensList": "Lista de RealTokens",
-    "recentChanges": "Cambios recientes",
-    "settings": "Configuración",
-    "about": "Acerca de",
-    "feedback": "Comentarios",
-    "application": "Aplicación",
-    "version": "Versión",
-    "author": "Autor",
-    "thanks": "Gracias",
-    "thankYouMessage": "Gracias a todos los que contribuyeron a este proyecto.",
-    "specialThanks": "Agradecimientos especiales a @Sigri, @ehpst, y pitsbi por su apoyo.",
-    "donate": "Donar",
-    "supportProject": "Apoyar el proyecto",
-    "donationMessage": "Si te gusta esta aplicación y quieres apoyar su desarrollo, puedes donar.",
-    "paypal": "PayPal",
-    "crypto": "Crypto",
-    "cryptoDonationAddress": "Dirección de donación de criptomonedas",
-    "sendDonations": "Envía tus donaciones a la siguiente dirección:",
-    "addressCopied": "Dirección copiada al portapapeles",
-    "copy": "Copiar",
-    "close": "Cerrar",
-    "week": "Semana",
-    "rentGraph": "Gráfico de alquileres recibidos",
-    "tokenDistribution": "Distribución de tokens por tipo de propiedad",
-    "singleFamily": "Casa unifamiliar",
-    "multiFamily": "Multifamiliar",
-    "duplex": "Dúplex",
-    "condominium": "Condominio",
-    "mixedUse": "Uso mixto",
-    "commercial": "Comercial",
-    "sfrPortfolio": "Cartera SFR",
-    "mfrPortfolio": "Cartera MFR",
-    "resortBungalow": "Bungaló de resort",
-    "unknown": "Desconocido",
-    "searchHint": "Buscar...",
-    "allCities": "Todas las ciudades",
-    "rentalStatusAll": "Todos",
-    "rentalStatusRented": "Alquilado",
-    "rentalStatusPartiallyRented": "Parcialmente alquilado",
-    "rentalStatusNotRented": "No alquilado",
-    "sortByName": "Ordenar por nombre",
-    "sortByValue": "Ordenar por valor",
-    "sortByAPY": "Ordenar por rendimiento",
-    "ascending": "Ascendente",
-    "descending": "Descendente",
-    "tokenDistributionByCity": "Distribución de tokens por ciudad",
-    "tokenDistributionByRegion": "Distribución de tokens por región",
-    "tokenDistributionByCountry": "Distribución de tokens por país",
-    "clearCacheData": "Borrar caché/datos",
-    "dashboard": "Panel de control",
-    "statistics": "Estadísticas",
-    "noDataAvailable": "No hay datos disponibles, por favor añade un nuevo monedero",
-    "manageAddresses": "Añadir monedero",
-    "maps": "Mapas",
+  "@@locale": "es",
+  "settingsTitle": "Configuración",
+  "darkTheme": "Tema oscuro",
+  "light": "Claro",
+  "dark": "Oscuro",
+  "themeUpdated": "Tema actualizado a {theme}",
+  "language": "Idioma",
+  "languageUpdated": "Idioma actualizado a {language}",
+  "english": "Inglés",
+  "french": "Francés",
+  "spanish": "Espagnol",
+  "manageEvmAddresses": "Gestionar monederos",
+  "hello": "Hola",
+  "lastRentReceived": "Su último alquiler recibido asciende a ",
+  "portfolio": "Portafolio",
+  "totalPortfolio": "Portafolio total",
+  "wallet": "Monedero",
+  "rmm": "RMM",
+  "currency":"Moneda",
+  "rwaHoldings": "RWA Holdings SA",
+  "properties": "Propiedades",
+  "rented": "Alquilado",
+  "rentedUnits": "Unidades alquiladas",
+  "tokens": "Tokens",
+  "totalTokens": "Total de tokens",
+  "rents": "Alquileres",
+  "annualYield": "Rendimiento anual",
+  "daily": "Diario",
+  "weekly": "Semanal",
+  "monthly": "Mensual",
+  "annually": "Anual",
+  "noRentReceived": "No se ha recibido alquiler",
+  "finances": "Finanzas",
+  "others": "Otros",
+  "insights": "Información",
+  "characteristics": "Características",
+  "constructionYear": "Año de construcción",
+  "propertyStories": "Número de pisos",
+  "totalUnits": "Unidades totales",
+  "lotSize": "Tamaño del lote",
+  "squareFeet": "Tamaño interior",
+  "offering": "Oferta",
+  "initialLaunchDate": "Fecha de lanzamiento inicial",
+  "rentalType": "Tipo de alquiler",
+  "rentStartDate": "Primer alquiler",
+  "totalInvestment": "Inversión total",
+  "underlyingAssetPrice": "Precio del activo subyacente",
+  "initialMaintenanceReserve": "Reserva de mantenimiento inicial",
+  "grossRentMonth": "Alquiler bruto por mes",
+  "netRentMonth": "Alquiler neto por mes",
+  "annualPercentageYield": "Rendimiento anual",
+  "blockchain": "Blockchain",
+  "tokenAddress": "Dirección del token",
+  "network": "Red",
+  "tokenSymbol": "Símbolo del token",
+  "contractType": "Tipo de contrato",
+  "rentalStatus": "Estado del alquiler",
+  "yieldEvolution": "Evolución del rendimiento",
+  "priceEvolution": "Evolución del precio",
+  "viewOnRealT": "Ver en RealT",
+  "notSpecified": "No especificado",
+  "noPriceEvolution": "Sin evolución del precio. El último precio es:",
+  "priceEvolutionPercentage": "Evolución del precio:",
+  "noYieldEvolution": "Sin evolución del rendimiento. El último rendimiento es:",
+  "yieldEvolutionPercentage": "Evolución del rendimiento:",
+  "unknownCity": "Ciudad desconocida",
+  "nameUnavailable": "Nombre no disponible",
+  "other": "Otro",
+  "totalValue": "Valor total",
+  "amount": "Cantidad",
+  "apy": "APY",
+  "revenue": "Ingresos",
+  "day": "Día",
+  "month": "Mes",
+  "year": "Año",
+  "appName": "RealToken",
+  "appDescription": "aplicación móvil para la comunidad",
+  "realTokensList": "Lista de RealTokens",
+  "recentChanges": "Cambios recientes",
+  "settings": "Configuración",
+  "about": "Acerca de",
+  "feedback": "Comentarios",
+  "application": "Aplicación",
+  "version": "Versión",
+  "author": "Autor",
+  "thanks": "Gracias",
+  "thankYouMessage": "Gracias a todos los que contribuyeron a este proyecto.",
+  "specialThanks": "Agradecimientos especiales a @Sigri, @ehpst, y @pitsbi por su apoyo.",
+  "donate": "Donar",
+  "supportProject": "Apoyar el proyecto",
+  "donationMessage": "Si te gusta esta aplicación y quieres apoyar su desarrollo, puedes donar.",
+  "paypal": "PayPal",
+  "crypto": "Crypto",
+  "cryptoDonationAddress": "Dirección de donación de criptomonedas",
+  "sendDonations": "Envía tus donaciones a la siguiente dirección:",
+  "addressCopied": "Dirección copiada al portapapeles",
+  "copy": "Copiar",
+  "close": "Cerrar",
+  "week": "Semana",
+  "rentGraph": "Gráfico de alquileres recibidos",
+  "tokenDistribution": "Distribución de tokens por tipo de propiedad",
+  "singleFamily": "Casa unifamiliar",
+  "multiFamily": "Multifamiliar",
+  "duplex": "Dúplex",
+  "condominium": "Condominio",
+  "mixedUse": "Uso mixto",
+  "commercial": "Comercial",
+  "sfrPortfolio": "Cartera SFR",
+  "mfrPortfolio": "Cartera MFR",
+  "resortBungalow": "Bungaló de resort",
+  "unknown": "Desconocido",
+  "searchHint": "Buscar...",
+  "allCities": "Todas las ciudades",
+  "rentalStatusAll": "Todos",
+  "rentalStatusRented": "Alquilado",
+  "rentalStatusPartiallyRented": "Parcialmente alquilado",
+  "rentalStatusNotRented": "No alquilado",
+  "sortByName": "Ordenar por nombre",
+  "sortByValue": "Ordenar por valor",
+  "sortByAPY": "Ordenar por rendimiento",
+  "sortByInitialLaunchDate":"ordenar por agregado recientemente",
+  "ascending": "Ascendente",
+  "descending": "Descendente",
+  "tokenDistributionByCity": "Distribución de tokens por ciudad",
+  "tokenDistributionByRegion": "Distribución de tokens por región",
+  "tokenDistributionByCountry": "Distribución de tokens por país",
+  "clearCacheData": "Borrar caché/datos",
+  "dashboard": "Panel de control",
+  "statistics": "Estadísticas",
+  "noDataAvailable": "No hay datos disponibles, por favor añade un nuevo monedero",
+  "manageAddresses": "Añadir monedero",
+  "maps": "Mapas",
   "depositBalance": "Depósitos",
   "borrowBalance": "`Préstamos",
   "usdcDepositBalance": "Saldo de depósitos USDC",
   "usdcBorrowBalance": "Saldo de préstamos USDC",
   "xdaiDepositBalance": "Saldo de depósitos XDAI",
   "xdaiBorrowBalance": "Saldo de préstamos XDAI",
-   "ethereumContract": "Contrato de Ethereum",
+  "ethereumContract": "Contrato de Ethereum",
   "gnosisContract": "Contrato de Gnosis",
-  "viewOnMap":"voir sur la carte",
+  "viewOnMap":"Ver en el Mapa",
   "totalRentReceived":"total of revenus",
-    "groupedRentGraph": "Loyers groupés",
-  "cumulativeRentGraph": "Cumul des loyers"
+  "groupedRentGraph": "Gráfico de Alquiler Agrupado",
+  "cumulativeRentGraph": "Gráfico Acumulativo de Alquileres",
+  "roiPerProperties": "ROI de la propiedad",
+  "roiAlertInfo": "Esta función de ROI está en beta y actualmente se calcula en función de los ingresos recibidos de la propiedad y el valor actual del token."
   }
