--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -86,7 +86,7 @@
   "author": "Auteur",
   "thanks": "Remerciements",
   "thankYouMessage": "Merci à tous ceux qui ont contribué à ce projet.",
-  "specialThanks": "Remerciements spéciaux à @Sigri, @ehpst, et pitsbi pour leur soutien.",
+  "specialThanks": "Remerciements spéciaux à @Sigri, @ehpst, et @pitsbi pour leur soutien.",
   "donate": "Faire un don",
   "supportProject": "Soutenir le projet",
   "donationMessage": "Si vous aimez cette application et souhaitez soutenir son développement, vous pouvez faire un don.",
@@ -116,9 +116,10 @@
   "rentalStatusRented": "Loué",
   "rentalStatusPartiallyRented": "Partiellement loué",
   "rentalStatusNotRented": "Non loué",
-  "sortByName": "Trier par nom",
-  "sortByValue": "Trier par valeur",
-  "sortByAPY": "Trier par rendement",
+  "sortByName": "Tri par nom",
+  "sortByValue": "Tri par valeur",
+  "sortByAPY": "Tri par rendement",
+  "sortByInitialLaunchDate": "tri par ajout recent",
   "ascending": "Ascendant",
   "descending": "Descendant",
   "tokenDistributionByCity": "Répartition des jetons par ville",
@@ -130,7 +131,7 @@
   "noDataAvailable": "Aucune donnée disponible, veuillez ajouter un nouveau portefeuille",
   "manageAddresses": "Ajouter un portefeuille",
   "maps": "Cartes",
-    "depositBalance": "Dépôts",
+  "depositBalance": "Dépôts",
   "borrowBalance": "Emprunts",
   "usdcDepositBalance": "Solde des dépôts USDC",
   "usdcBorrowBalance": "Solde des emprunts USDC",
@@ -141,5 +142,7 @@
   "viewOnMap": "voir sur la carte",
   "totalRentReceived": "total des revenus",
   "groupedRentGraph": "Loyers groupés",
-  "cumulativeRentGraph": "Cumul des loyers"
+  "cumulativeRentGraph": "Cumul des loyers",
+  "roiPerProperties":"ROI de la propriété",
+  "roiAlertInfo":"Cette fonction ROI est en beta, elle est pour le moment calculé en fonction des revenus recus de la propriété et la valeur actuelle du token."
 }
