Major update (improvements & features)
- Amélioration vitesse de chargement
- persistance des données
- optimisation des requêtes réseaux
- calcul du ROI global sans tenir compte du RMM
- Ajout des prochains Rondays
- Fix conversion USD
- Sauvegarde des préférences de tri
- Ajout page pour vérifier les derniers rafraichissement de API
- et d'autres choses que j'ai oubliés

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -151,6 +151,12 @@
   "unknownTokenName": "Unknown name",
   "noImageAvailable": "Image link not available",
   "duplicate": "dupicate",
+    "futureRents": "Future Rents",
+  "noFutureRents": "No future rents",
+  "nextRondays": "Next Rondays",
+  "noCommunicatedDate": "Date not provided",
+  "serviceStatusPage": "Services status",
+  "lastExecution": "Last update",
   "@dashboard": {
     "description": "Label for the Dashboard tab"
   },
