--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -77,7 +77,7 @@
   "appName": "RealToken",
   "appDescription": "application mobile",
   "realTokensList": "Liste des RealTokens",
-  "recentChanges": "Modifications récentes",
+  "recentChanges": "Evolutions récentes",
   "settings": "Paramètres",
   "about": "À propos",
   "feedback": "Retour d'expérience",
@@ -145,7 +145,7 @@
   "cumulativeRentGraph": "Cumul des loyers",
   "roiPerProperties":"ROI de la propriété",
   "roiAlertInfo":"Cette fonction ROI est en beta, elle est pour le moment calculé en fonction des revenus recus de la propriété et la valeur actuelle du token.",
-  "recentUpdatesTitle": "Modifications des 30 derniers jours",
+  "recentUpdatesTitle": "30 derniers jours",
   "noRecentUpdates": "Aucune modification récente disponible.",
   "unknownTokenName": "Nom inconnu",
   "noImageAvailable": "Lien d'image non disponible",
@@ -155,6 +155,31 @@
   "nextRondays": "Prochains Rondays",
   "noCommunicatedDate": "Date non communiquée",
   "serviceStatusPage": "Statut des services",
-  "lastExecution": "Derniere mise a jour"
-
+  "lastExecution": "Derniere mise a jour",
+  "allWorkCorrectly" : "Tout fonctionne correctement",
+  "somethingWrong":"Il se pourrait que les données ne soient pas à jour",
+  "realTTitle": "RealT",
+  "totalTokens": "Total de tokens",
+  "tokens": "tokens",
+  "totalInvestment": "Investissement total",
+  "netAnnualRent": "Loyer net annuel",
+  "totalUnits": "Total d'unités",
+  "units": "unités",
+  "rentedUnits": "unités louées",
+  "realTPerformance": "Performance de RealT",
+  "annualYield": "Rendement annuel",
+  "textSize":"Taille du text",
+  "convertSqft":"Convertir les sqft a m²",
+  "rentStartFuture":"Loyer non demarré",
+  "confirmAction": "Confirmer l'action",
+  "areYouSureClearData": "Êtes-vous sûr de vouloir effacer le cache et les données ?",
+  "cancel": "Annuler",
+  "confirm": "Confirmer",
+  "clearCacheData": "Effacer le cache et les données",
+  "exportData": "Exporter les données",
+  "importData": "Importer les données",
+  "exportSuccess": "Données exportées avec succès",
+  "exportFailed": "Échec de l'exportation des données",
+  "importSuccess": "Données importées avec succès",
+  "importFailed": "Échec de l'importation des données"
 }
