--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -145,15 +145,41 @@
   "cumulativeRentGraph": "Gráfico Acumulativo de Alquileres",
   "roiPerProperties": "ROI de la propiedad",
   "roiAlertInfo": "Esta función de ROI está en beta y actualmente se calcula en función de los ingresos recibidos de la propiedad y el valor actual del token.",
-  "recentUpdatesTitle": "Cambios en los últimos 30 días",
+  "recentUpdatesTitle": "últimos 30 días",
   "noRecentUpdates": "No hay cambios recientes disponibles.",
   "unknownTokenName": "Nombre desconocido",
   "noImageAvailable": "Enlace de imagen no disponible",
   "duplicate": "duplicado",
-    "futureRents": "Alquileres futuros",
+  "futureRents": "Alquileres futuros",
   "noFutureRents": "No hay alquileres futuros",
   "nextRondays": "siguiente Rondays",
   "noCommunicatedDate": "fecha no comunicada",
   "serviceStatusPage": "Estado de los servicios",
-  "lastExecution": "Última actualización" 
+  "lastExecution": "Última actualización",
+  "allWorkCorrectly": "Todo funciona correctamente",
+  "somethingWrong": "Es posible que los datos no estén actualizados",
+  "realTTitle": "RealT",
+  "totalTokens": "Total de tokens",
+  "tokens": "tokens",
+  "totalInvestment": "Inversión total",
+  "netAnnualRent": "Alquiler neto anual",
+  "totalUnits": "Total de unidades",
+  "units": "unidades",
+  "rentedUnits": "unidades alquiladas",
+  "realTPerformance": "Rendimiento de RealT",
+  "annualYield": "rendimiento anual",
+  "textSize":"Tamaño de texto",
+"convertSqft": "Convertir los sqft en m²",
+"rentStartFuture": "Alquiler no iniciado",
+"confirmAction": "Confirmar acción",
+"areYouSureClearData": "¿Estás seguro de que deseas borrar la caché y los datos?",
+"cancel": "Cancelar",
+"confirm": "Confirmar",
+"clearCacheData": "Borrar caché y datos",
+"exportData": "Exportar datos",
+"importData": "Importar datos",
+"exportSuccess": "Datos exportados con éxito",
+"exportFailed": "Error al exportar los datos",
+"importSuccess": "Datos importados con éxito",
+"importFailed": "Error al importar los datos"
   }
